--- a/index.html
+++ b/index.html
@@ -3,30 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS</title>
-    <style>
-      .browntext {
-        color: brown;
-      }
-    </style>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../src/output.css" />
+    <title>Tailwind</title>
   </head>
-  <body>
-    <h1 style="color: blueviolet">Lorem ipsum dolor sit amet.</h1>
-    <h2 class="browntext">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-    </h2>
-
-    <p class="browntext">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum doloremque
-      dolor nemo sapiente architecto dolorem exercitationem rem? Eveniet,
-      quibusdam molestiae! Consequuntur ut nesciunt obcaecati, commodi velit
-      voluptatem fugiat esse repellat, eum ad nihil neque, ipsum laborum
-      eligendi repellendus. Dignissimos laborum eum quo culpa reprehenderit
-      magnam quidem ab temporibus ex reiciendis saepe eligendi, ipsa totam?
-      Delectus assumenda cupiditate porro odio, culpa velit molestiae odit
-      veniam aut distinctio placeat maiores, maxime veritatis optio magni iusto
-      inventore pariatur eligendi blanditiis expedita voluptatem rerum.
+  <body class="flex h-lvh justify-center items-center flex-col">
+    <h1 class="underline bg-red-400">Hello World</h1>
+    <p class="underline bg-yellow-300 text-center p-5">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates
+      placeat consequatur ipsam. Repellendus sunt dolor consequuntur itaque,
+      placeat et! Quisquam.
     </p>
   </body>
 </html>
